<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        style="@style/Title_1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_32"
        android:text="@string/InputInLK" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        app:strokeColor="@android:color/transparent"
        app:strokeWidth="0dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="144dp"
        app:cardBackgroundColor="@color/grey_1"
        app:cardPreventCornerOverlap="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Title_one"
                style="@style/Title_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/text_title_one"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:textColorHint="@color/grey_3"
                android:layout_width="match_parent"
                style="@style/TextInputLayoutBoxColor"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                app:boxCornerRadiusBottomEnd="@dimen/spacing_small"
                app:boxCornerRadiusBottomStart="@dimen/spacing_small"
                app:boxCornerRadiusTopEnd="@dimen/spacing_small"
                app:boxCornerRadiusTopStart="@dimen/spacing_small"
                app:startIconDrawable="@drawable/icon_message"
                app:boxBackgroundColor="@color/grey_2"
                app:startIconTint="@color/grey_5"
                app:errorIconDrawable="@null"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:endIconTint="@color/grey_5"
                app:hintTextColor="@color/grey_3"
                app:placeholderTextAppearance="@color/grey_3"
                app:placeholderTextColor ="@color/grey_3"
                app:boxStrokeColor="@color/transparent"
                app:endIconDrawable="@drawable/icon_close_white"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Title_one"
                app:placeholderText="@string/text_place_holder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bv_main"
                style="@style/ButtonStyleBlue"
                android:layout_width="167dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/text_bv_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                />

            <TextView
                android:id="@+id/bv_main2"
                style="@style/Bottom_text_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/text_bv_main2"
                android:textAllCaps="false"
                android:textColor="@color/basic_blue"
                app:layout_constraintBottom_toBottomOf="@+id/bv_main"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bv_main"
                app:layout_constraintTop_toTopOf="@+id/bv_main" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/grey_1"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_child_3"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_small"
                style="@style/Title_3"
                android:layout_height="wrap_content"
                android:text="@string/text_tv_child_3" />

            <TextView
                android:id="@+id/tv_child_2"
                style="@style/Bottom_text_2"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tv_child_2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bv_child"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/spacing_large"
                style="@style/ButtonStyleGreen"
                android:text="@string/text_bv_child" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>