<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/tv_title"
        android:layout_marginTop="162dp"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      >

        <TextView
            android:id="@+id/tv_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title_2"
            android:text="@string/text_tv_title_two"  />

        <TextView
            android:layout_marginHorizontal="@dimen/spacing_small"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Title_2"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_child_title"
        style="@style/Title_3"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:text="@string/text_tv_child_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:layout_marginRight="114dp"
        android:layout_marginLeft="@dimen/spacing_medium"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:background="@drawable/corner_8_dp"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginVertical="@dimen/spacing_small"
            android:id="@+id/et_one"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:textColorHint="@color/grey_3"
            android:gravity="center"
            style="@style/Title_1"
            android:hint="@string/et_symbol"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            />

        <EditText
            android:background="@drawable/corner_8_dp"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginVertical="@dimen/spacing_small"
            android:id="@+id/ed_two"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:ems="10"
            android:inputType="phone"
            android:textColorHint="@color/grey_3"
            android:gravity="center"
            style="@style/Title_1"
            android:hint="@string/et_symbol"/>

        <EditText
            android:background="@drawable/corner_8_dp"
            android:layout_marginRight="@dimen/spacing_small"
            android:layout_marginVertical="@dimen/spacing_small"
            android:id="@+id/et_three"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:maxLength="1"
            android:ems="10"
            android:inputType="phone"
            android:textColorHint="@color/grey_3"
            android:gravity="center"
            style="@style/Title_1"
            android:hint="@string/et_symbol"/>

        <EditText
            android:background="@drawable/corner_8_dp"
            android:layout_marginVertical="@dimen/spacing_small"
            android:id="@+id/et_four"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:maxLength="1"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone"
            android:textColorHint="@color/grey_3"
            android:gravity="center"
            style="@style/Title_1"
            android:hint="@string/et_symbol"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bv_responses"
        android:background="@drawable/bottom_selector"
        style="@style/Bottom_text_1"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textAllCaps="false"
        android:text="@string/text_bv_responses" />
</LinearLayout>